--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-rEwGrI4kXx mbr-fullscreen mbr-parallax-background" id="header2-5">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rEwGrI4kXx mbr-fullscreen mbr-parallax-background" id="header2-5">
 
     
 
@@ -152,7 +152,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(135, 154, 159);">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(135, 154, 159);">
     </div>
 
     <div class="container align-center">
@@ -378,7 +378,7 @@
                 </div> 
                 <div class="mbr-crt-title pt-3">
                     <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Word,PowerPoint, Excel</h4>
+                        Word, PowerPoint, Excel</h4>
                 </div>                 
             </div>
 
@@ -530,7 +530,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I9LiLLfFIRCjZ+YGn7Dsuu45hAFBsbvSsVLHyXxmzsV3ngVQdyoonID9F3azYXHCW47WWUVe84YT3qySzBpK4Vl+bl4wcNgD1P9DgjvJ2LyGRrh1K0GRKCvTLeJF7O4U">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Kwb/ddeUJWsCHTU2VxX5XWwNvoU0AaQrsgjYjLJIcx5XDWU2wEQgMm+26Tx4YVODUzOETR5YCFzLmaVadTD6Q5pzGVD3F/yrO+YGvmvJ4VapNmObNSagdIYYOeXmX9wk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci d'avoir rempli ce formulaire</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -584,7 +584,7 @@
                 <h5 class="pb-3"></h5>
                 <p class="mbr-text">
                     Email: salmabenaziz13@gmail.com
-                    <br>Téléphone: 06 37 07 54 17                    <br>05 30 70 28 48
+                    <br>Téléphone: 06 64 71 61 14&nbsp;<br>05 30 70 28 48
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
