create github pages

--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
 
     
 
@@ -519,7 +519,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gA+J2ZJ0N1T5jMRbGSSmwqWlynSsYg+JTgKYHzkzHyxaLE+BUuF2KXBxZHwx9trxzmSqjM1qLE2llKTgjpFnpU3SxYNMNi7uh48J9NgktlifbQ0mKTyK3LYomSH9JZns">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gRWra+9Qq9qFlFMfu1eU0qBB4PFIByS43qqdseC9T4KpTqGhPuUUOGsF1tuYVwdNs4J/LSaaO0qmh4tqJpKpg8cW4ju0ont4R+tb+JrXnEiJYgnagSqVxLAGfMVEDFCl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci d'avoir rempli ce formulaire</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
