create github pages

--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
 
     
 
@@ -519,7 +519,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xB2WHXrMrQAKXwIe3ylrM5Amtd5+Itf5I1iQw59EvAAbv6xgIhA+hxidGRaPrdeb7+NCxE/UxpKAVsH88Dpn2qbvVWskJ8pNuz+S7y/qx+nHQktlJgO0084qDrpeWuPC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pT7JN0VImIOrYgMG03RziY0khvad1fn4tUmAgPtN5n+Sdk4MeIvSctXXda1AJHbVwyCfmv08lqFIugTjQ1RAsC0x/UXJv9T8VLfWrzrt3xr9vlztO1pf3G8YLyewvKOy">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci d'avoir rempli ce formulaire</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
