create github pages

--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="cid-rPcySc7c99 mbr-fullscreen mbr-parallax-background" id="header2-21">
 
     
 
@@ -519,7 +519,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P0wt39v+PcpRsoDVmV413uBXvPQ6/r7CNf9hLDDYMlXsUnvfho6FKaVMpR98RYJL4XezR49b/Wks2VKzdpkoRIDoheH2Nh1QPiNE2Zwwz38j9r9/AMzc4IJxPkftlvYf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tB+2t7scH424veGs/BDYuDoKE+ApZgaY63Qya9Rfragf9YiwnepVCqFu+rD4CFGGoHZJq1Fn+gso5/ENpqKxBaY7nWoH+GALFhoZA3B/VDsci7FUIX46IQkLIp/nU37A">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci d'avoir rempli ce formulaire</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
